@@ -1,6 +1,13 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.406 2008/05/20 16:43:43 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.407 2008/05/21 10:45:54 armin76 Exp $
+
+*mozilla-firefox-3.0_rc1-r1 (21 May 2008)
+
+  21 May 2008; Raúl Porcel <armin76@gentoo.org>
+  -mozilla-firefox-3.0_beta5-r4.ebuild, -mozilla-firefox-3.0_rc1.ebuild,
+  +mozilla-firefox-3.0_rc1-r1.ebuild:
+  Revision bump to try to fix the wrapper thing, remove old
 
   20 May 2008; Raúl Porcel <armin76@gentoo.org>
   mozilla-firefox-3.0_beta5-r4.ebuild, mozilla-firefox-3.0_rc1.ebuild:
